added icon for .inventory files

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -16,3 +16,12 @@
   font-family: 'Source Code Pro', sans-serif;
   font-size: 12px;
 }
+
+/*
+* file-icon extensions:
+*/
+
+.icon[data-name$=".inventory"]:before{
+    font-family: Devicons;
+    content: "\24b6";
+}
